welcome.lessons.welcome.variables.Variables.scala.code
while(!estSurBiscuit){
	
	var x:Int = 0
	x = x + 1
	avance()
}
if (estSurBiscuit){
	prendBiscuit()
}
while(x != 0){
	recule()
	
}
